# quicktick-tty

./: Cargo.toml  README.md
src/: api.rs  app.rs  handler.rs  helper.rs  lib.rs  main.rs  tui.rs  ui.rs
src/api/: board.rs  task.rs  user.rs
src/helper/: functions.rs  input.rs  stateful_list.rs
