[package]
name = "quicktick-tty"
version = "0.1.0"
authors = ["osmak1234 <tadeashanus0631@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
reqwest = { version = "0.11.20", features = [
  "cookie_crate",
  "cookie_store",
  "cookies",
  "tokio-socks",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.29.1", features = ["full"] }
tui = { package = "ratatui", version = "0.23.0" }
tui-logger = { version = "0.9.5", features = [
  "crossterm",
  "ratatui",
  "ratatui-support",
] }

tui-input = "0.8.0"

uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
# error handling
anyhow = "1"
